# advent-of-code

./: .pylintrc  README.md  pyproject.toml  setup.cfg  tox.ini
2020/: pytest.ini
2020/day_10/: day10.py
2020/day_11/: day11.py
2020/day_12/: day12.py
2020/day_13/: day13.py
2020/day_14/: day14.py
2020/day_15/: day15.py
2020/day_3/: day3.py
2020/day_4/: day4.py
2020/day_5/: day5.py
2020/day_6/: day6.py
2020/day_7/: day7.py
2020/day_8/: day8.py
2020/day_9/: day9.py
python-2020/: Pipfile  README.md  pyproject.toml  setup.cfg
python-2020/day_1/: day1.py
python-2020/day_13/: day13.py
python-2020/day_14/: day14.py
python-2020/day_15/: day15.py
python-2020/day_2/: day2.py
python-2020/day_7/: day7.py
python-2020/day_8/: day8.py
rust-2015/: Cargo.toml  README.md
rust-2015/src/: main.rs
