[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = clean,py38,py39
isolated_build = True

[testenv]
deps =
    bandit
    pylint
    coverage[toml]
    mypy
    pytest
    pytest-subtests
    pytest-cov
    pytest-bandit
    pytest-xdist
    pytest-pylint
    pytest-mypy
    pytest-randomly
    safety
commands =
    safety check
    pytest

[testenv:clean]
deps = coverage[toml]
skip_install = true
commands = coverage erase
"""
