[build-system]
# Minimum requirements for the build system to execute according to PEP 508
# specifications plus combination with what is required for tox
# here: https://tox.readthedocs.io/en/latest/example/basic.html
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = clean,py38,py39
isolated_build = True

[testenv]
deps =
    bandit
    pylint
    coverage[toml]
    mypy
    pytest
    pytest-subtests
    pytest-cov
    pytest-bandit
    pytest-xdist
    pytest-pylint
    pytest-mypy
    pytest-randomly
    safety
commands =
    safety check
    pytest

[testenv:clean]
deps = coverage[toml]
skip_install = true
commands = coverage erase
"""
