[build-system]
# Minimum requirements for the build system to execute according to PEP 508
# specifications plus combination with what is required for tox
# here: https://tox.readthedocs.io/en/latest/example/basic.html
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "*.py"
addopts = [
    "-v",
    "-ra",
    "-W=always",
    "--cov",
    "--cov-append",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--cov-fail-under=100",
    "--ignore-glob=**/day1.py",
    "--ignore-glob=**/day2.py",
    "--ignore-glob=**/day3.py",
    "--ignore-glob=**/day4.py",
    "--ignore-glob=**/day5.py",
    "--ignore-glob=**/day6.py",
    "--ignore-glob=**/day7.py",
    "--ignore-glob=**/day8.py",
    "--ignore-glob=**/day9.py",
    "--ignore-glob=**/day10.py",
    "--ignore-glob=**/day11.py",
    "--ignore-glob=**/day12.py",
    "--ignore-glob=setup.py",
    "--mypy",
    "--pylint"
]

[mypy]
exclude = "setup.py"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_incomplete_stub = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = clean,py38,py39
isolated_build = True

[testenv]
deps =
    bandit
    pylint
    coverage[toml]
    mypy
    pytest
    pytest-subtests
    pytest-cov
    pytest-bandit
    pytest-xdist
    pytest-pylint
    pytest-mypy
    pytest-randomly
    safety
commands =
    safety check
    pytest

[testenv:clean]
deps = coverage[toml]
skip_install = true
commands = coverage erase
"""
