[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = advent-of-code
url = https://github.com/davidlag0/advent-of-code
project_urls =
    GitHub: repo = https://github.com/davidlag0/advent-of-code
description = My Advent of Code
long_description = file: README.md
long_description_content_type = text/markdown
author = David Laganière
author_email = contact@none
zip_safe = False
license_file = LICENSE
platforms = any
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
tests_require = 
    bandit
    pylint
    coverage
    mypy
    pytest
    pytest-cov
    tox

[tool:pytest]
python_files =
    *.py

addopts =
    -v
    -ra
    --cov 2020
    --cov-report term-missing
    --cov-branch
    --rootdir=./
    --ignore=2020/day_1
    --ignore=2020/day_2
