[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = advent-of-code
url = https://github.com/davidlag0/advent-of-code
project_urls =
    GitHub: repo = https://github.com/davidlag0/advent-of-code
description = My Advent of Code
long_description = file: README.md
long_description_content_type = text/markdown
author = David Laganière
author_email = contact@none
zip_safe = False
license_file = LICENSE
platforms = any
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
tests_require = 
    bandit
    pylint
    coverage
    mypy
    pytest
    pytest-cov
    pytest-bandit
    tox
    pytest-xdist
    pytest-pylint
    pytest-mypy

[tool:pytest]
python_files =
    *.py

addopts =
    -v
    -ra
    -W=always
    --cov
    --cov-report=term-missing
    --cov-report=html
    --cov-branch
    --cov-fail-under=100
    --rootdir=./
    --ignore-glob=**/day1.py
    --ignore-glob=**/day2.py
    --ignore-glob=setup.py
#    --pylint
    --mypy

bandit_targets =
    ./

bandit_recurse = true
bandit_conf_level = 1
bandit_sev_level = 1

bandit_exclude =
    ./.tox

[mypy]
exclude = setup.py
